# InsiteFTE

./: .gitignore  AGENT_README.md  Handbook.md  Home.md  README.md  combined_runner.py  demo_agent.py  pyproject.toml  run_agent.py  test_integration.py  test_new_modules.py
.obsidian/: workspace.json
.specify/memory/: constitution.md
01_Inbox/: nextjs_details.txt
02_Needs_Action/: example_20260123023407268469_20260123023413782280.md
03_Pending_Approval/: nextjs_20260208013423053101_original_topic_20260208_013433.md  nextjs_20260208013423053101_research_20260208_013433.md
04_Approved/: example-task-plan.md  example-task_20260123023901102695.md
agentic_loop/: __init__.py  config.py  main.py
agentic_loop/agent/: __init__.py  core.py  critic.py  memory.py
agentic_loop/obsidian/: __init__.py  api_wrapper.py  dashboard.py
agentic_loop/planner/: __init__.py  autonomous_planner.py
agentic_loop/state_machine/: __init__.py  engine.py  states.py
agentic_loop/tools/: __init__.py  base_tool.py  registry.py  search_web.py  send_notification.py
agentic_loop/utils/: __init__.py  file_operations.py  json_parser.py  logger.py
history/prompts/Digital FTE/: 10-Gold-Tier-Agentic-Loop-tasks.tasks.prompt.md  2-Digital-FTE-specification.spec.prompt.md  3-Digital-FTE-clarification.spec.prompt.md  4-Digital-FTE-technical-plan.plan.prompt.md  5-Digital-FTE-tasks-generated.tasks.prompt.md  6-Digital-FTE-implementation-complete.green.prompt.md  8-Gold-Tier-Capabilities-spec.spec.prompt.md  9-Gold-Tier-Agentic-Loop-plan.plan.prompt.md
history/prompts/constitution/: 1-Digital-FTE-constitution.constitution.prompt.md  7-Digital-FTE-Gold-Tier-constitution.constitution.prompt.md
history/prompts/general/: 001-execute-implementation-plan.general.prompt.md
scripts/: agent_logic.py  config.py  exceptions.py  watcher.py
scripts/tools/: web_search.py
scripts/utils/: file_handler.py  metadata.py  sanitizer.py
specs/001-digital-fte-automation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-digital-fte-automation/checklists/: requirements.md
specs/002-gold-tier-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/integration/: test_workflow.py
tests/unit/: test_file_handler.py  test_metadata.py  test_sanitizer.py
(+3 files in other folders)
