[project]
name = "digital-fte-automation"
version = "0.1.0"
description = "Digital FTE (Full-Time Equivalent) system that automates task management through an Obsidian vault using a folder-based state machine"
authors = [
    {name = "AI Assistant", email = "assistant@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "watchdog>=4.0.0",
    "ruamel-yaml>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "scripts.utils*"]